# goosball

./: CMakeLists.txt  init.c  main.cpp
include/glad/: glad.h
src/: glad.c
